# alpha-research

./: LICENSE  README.md  pyproject.toml
alpha_research/data/ingestion/: mt5.py
alpha_research/data/market/: constants.py
alpha_research/evaluation/: ic.py  statistical_tests.py
alpha_research/features/: returns.py  targets.py  trend.py
